--- a/page12.html
+++ b/page12.html
@@ -20,30 +20,36 @@
     color: cyan;
   }
 
-  /* Circle container */
+  /* Rotating circle container */
   .circle {
     position: relative;
     width: 500px;
     height: 500px;
     margin: 80px auto;
-    animation: spin 30s linear infinite;
     transform-style: preserve-3d;
+    animation: spin 30s linear infinite;
   }
   .circle img {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     border-radius: 20px;
     object-fit: cover;
-    transform-origin: center center -220px; /* circle radius */
+    transform-style: preserve-3d;
+    animation: zoomInOut 4s ease-in-out infinite;
     box-shadow: 0 0 15px white;
   }
 
   @keyframes spin {
-    0% { transform: rotateY(0deg);}
-    100% { transform: rotateY(360deg);}
+    0% { transform: rotateY(0deg); }
+    100% { transform: rotateY(360deg); }
+  }
+
+  @keyframes zoomInOut {
+    0%,100% { transform: scale(1); }
+    50% { transform: scale(1.15); }
   }
 
   /* Floating emojis */
@@ -103,9 +109,7 @@
 <h1>Happy Birthday Radhae 💙</h1>
 
 <!-- Rotating Circle -->
-<div class="circle" id="circle">
-  <!-- Images will be placed by JS -->
-</div>
+<div class="circle" id="circle"></div>
 
 <!-- Quiz -->
 <div id="quizBox">
@@ -121,11 +125,14 @@
 <script>
 /* Place 10 photos evenly around circle */
 const circle = document.getElementById("circle");
-for (let i = 1; i <= 10; i++) {
+const total = 10;
+const radius = 220; // distance from center
+
+for (let i = 1; i <= total; i++) {
   const img = document.createElement("img");
   img.src = `R${i}.jpg`;
-  const angle = (i-1) * (360/10);
-  img.style.transform = `rotateY(${angle}deg) translateZ(220px)`;
+  const angle = (i-1) * (360/total);
+  img.style.transform = `rotateY(${angle}deg) translateZ(${radius}px)`;
   circle.appendChild(img);
 }
 
