--- a/page12.html
+++ b/page12.html
@@ -2,105 +2,114 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Page 12 - Birthday Surprise</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday Radhae 💙</title>
 <style>
   body {
     margin: 0;
-    padding: 0;
-    background: black;
-    color: white;
-    font-family: Arial, sans-serif;
+    height: 100vh;
+    background: #111;
     overflow: hidden;
-    text-align: center;
-  }
-  h1 {
-    margin-top: 20px;
-    font-size: 28px;
-    font-weight: bold;
-    color: cyan;
+    font-family: 'Arial', sans-serif;
+    color: white;
   }
 
-  /* Rotating circle container */
-  .circle {
-    position: relative;
-    width: 500px;
-    height: 500px;
-    margin: 80px auto;
-    transform-style: preserve-3d;
-    animation: spin 30s linear infinite;
+  h1 {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: #00f;
+    z-index: 10;
   }
-  .circle img {
+
+  /* Center 3D carousel */
+  .carousel {
+    width: 450px;
+    height: 450px;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 180px;
-    height: 180px;
-    border-radius: 20px;
-    object-fit: cover;
     transform-style: preserve-3d;
-    animation: zoomInOut 4s ease-in-out infinite;
-    box-shadow: 0 0 15px white;
+    transform: translate(-50%, -50%) rotateY(0deg);
+    animation: rotate 20s linear infinite;
   }
 
-  @keyframes spin {
-    0% { transform: rotateY(0deg); }
-    100% { transform: rotateY(360deg); }
+  .carousel img {
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 0 20px #fff;
   }
 
-  @keyframes zoomInOut {
-    0%,100% { transform: scale(1); }
-    50% { transform: scale(1.15); }
+  @keyframes rotate {
+    0% { transform: translate(-50%, -50%) rotateY(0deg); }
+    100% { transform: translate(-50%, -50%) rotateY(360deg); }
   }
 
   /* Floating emojis */
   .emoji {
     position: absolute;
-    font-size: 28px;
-    animation: floatUp 4s linear forwards;
-    pointer-events: none;
-  }
-  @keyframes floatUp {
-    0% { opacity: 1; transform: translateY(0) scale(1);}
-    100% { opacity: 0; transform: translateY(-200px) scale(1.5);}
+    font-size: 2em;
+    animation: float 6s linear infinite;
   }
 
-  /* Quiz Box */
+  @keyframes float {
+    0% { transform: translateY(100vh) translateX(0) rotate(0deg); opacity: 1;}
+    100% { transform: translateY(-100vh) translateX(50px) rotate(360deg); opacity: 0;}
+  }
+
+  /* Quiz box */
   #quizBox {
-    display: none;
-    position: absolute;
-    top: 70%;
+    position: fixed;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    background: rgba(0,0,0,0.8);
-    padding: 20px;
-    border: 2px solid cyan;
+    transform: translate(-50%, -50%);
+    background: #222;
+    padding: 30px;
     border-radius: 15px;
-    box-shadow: 0 0 20px cyan;
-  }
-  #quizBox input {
-    padding: 8px;
-    font-size: 16px;
-    margin-top: 10px;
-  }
-  #quizBox button {
-    padding: 8px 16px;
-    font-size: 16px;
-    margin-top: 10px;
-    background: hotpink;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
+    text-align: center;
+    display: none;
+    z-index: 100;
   }
 
-  /* Fireworks canvas */
-  #fireworks {
+  #quizBox input[type="text"] {
+    padding: 10px;
+    font-size: 1em;
+    width: 70%;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: none;
+  }
+
+  #quizBox button {
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    background: #00f;
+    color: white;
+  }
+
+  /* Fireworks/confetti */
+  .confetti {
     position: fixed;
+    width: 10px;
+    height: 10px;
+    background: red;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
+    z-index: 999;
+    animation: confettiFall 3s linear forwards;
+  }
+
+  @keyframes confettiFall {
+    0% { transform: translateY(0) rotate(0deg);}
+    100% { transform: translateY(100vh) rotate(720deg);}
   }
 </style>
 </head>
@@ -108,109 +117,69 @@
 
 <h1>Happy Birthday Radhae 💙</h1>
 
-<!-- Rotating Circle -->
-<div class="circle" id="circle"></div>
+<!-- Audio -->
+<audio autoplay loop>
+  <source src="Page12.mp3" type="audio/mpeg">
+</audio>
 
-<!-- Quiz -->
+<!-- Carousel -->
+<div class="carousel" id="carousel">
+  <img src="R1.jpg" style="transform: rotateY(0deg) translateZ(600px);">
+  <img src="R2.jpg" style="transform: rotateY(36deg) translateZ(600px);">
+  <img src="R3.jpg" style="transform: rotateY(72deg) translateZ(600px);">
+  <img src="R4.jpg" style="transform: rotateY(108deg) translateZ(600px);">
+  <img src="R5.jpg" style="transform: rotateY(144deg) translateZ(600px);">
+  <img src="R6.jpg" style="transform: rotateY(180deg) translateZ(600px);">
+  <img src="R7.jpg" style="transform: rotateY(216deg) translateZ(600px);">
+  <img src="R8.jpg" style="transform: rotateY(252deg) translateZ(600px);">
+  <img src="R9.jpg" style="transform: rotateY(288deg) translateZ(600px);">
+  <img src="R10.jpg" style="transform: rotateY(324deg) translateZ(600px);">
+</div>
+
+<!-- Quiz Box -->
 <div id="quizBox">
-  <p style="font-size:18px;">Unnaku pucha haa name ha type pannu 👉</p>
-  <input type="text" id="answer">
+  <p style="font-size:1.2em;">Unnaku pucha haa name ha type pannu</p>
+  <input type="text" id="quizInput" placeholder="Type your answer here">
   <br>
   <button onclick="submitQuiz()">Submit</button>
 </div>
 
-<audio id="bgMusic" src="Page12.mp3" autoplay loop></audio>
-<canvas id="fireworks"></canvas>
-
 <script>
-/* Place 10 photos evenly around circle */
-const circle = document.getElementById("circle");
-const total = 10;
-const radius = 220; // distance from center
-
-for (let i = 1; i <= total; i++) {
-  const img = document.createElement("img");
-  img.src = `R${i}.jpg`;
-  const angle = (i-1) * (360/total);
-  img.style.transform = `rotateY(${angle}deg) translateZ(${radius}px)`;
-  circle.appendChild(img);
-}
-
-/* Floating emojis */
-function createEmoji() {
-  const symbols = ["❤️‍🩹","🤗","😚","🙈","💙"];
-  const emoji = document.createElement("div");
-  emoji.className = "emoji";
-  emoji.innerText = symbols[Math.floor(Math.random()*symbols.length)];
-  emoji.style.left = Math.random() * window.innerWidth + "px";
-  emoji.style.top = window.innerHeight + "px";
-  document.body.appendChild(emoji);
-  setTimeout(() => emoji.remove(), 4000);
-}
-setInterval(createEmoji, 600);
-
-/* Show Quiz after 30 sec */
-setTimeout(() => {
-  document.getElementById("quizBox").style.display = "block";
-  startFireworks();
-}, 30000);
-
-function submitQuiz() {
-  window.location.href = "page13.html";
-}
-
-/* Fireworks animation */
-const canvas = document.getElementById("fireworks");
-const ctx = canvas.getContext("2d");
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-let fireworks = [];
-
-class Firework {
-  constructor(x, y, color) {
-    this.x = x; this.y = y; this.color = color;
-    this.radius = 2;
-    this.alpha = 1;
-    this.velX = (Math.random() - 0.5) * 6;
-    this.velY = (Math.random() - 0.5) * 6;
+  // Floating emojis
+  const emojis = ['❤️‍🩹','❤️‍🩹','🤗','😚','🙈','💙'];
+  function createEmoji() {
+    const emoji = document.createElement('div');
+    emoji.classList.add('emoji');
+    emoji.style.left = Math.random() * 100 + 'vw';
+    emoji.style.animationDuration = (4 + Math.random()*4) + 's';
+    emoji.innerText = emojis[Math.floor(Math.random()*emojis.length)];
+    document.body.appendChild(emoji);
+    setTimeout(() => { emoji.remove(); }, 6000);
   }
-  update() {
-    this.x += this.velX;
-    this.y += this.velY;
-    this.alpha -= 0.02;
-  }
-  draw() {
-    ctx.globalAlpha = this.alpha;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.radius,0,Math.PI*2);
-    ctx.fillStyle=this.color;
-    ctx.fill();
-    ctx.globalAlpha=1;
-  }
-}
+  setInterval(createEmoji, 300);
 
-function startFireworks() {
-  setInterval(() => {
-    let colors = ["red","yellow","cyan","magenta","white","lime"];
-    let x = Math.random() * canvas.width;
-    let y = Math.random() * canvas.height/2;
-    for (let i=0;i<40;i++) {
-      fireworks.push(new Firework(x,y,colors[Math.floor(Math.random()*colors.length)]));
+  // Show quiz box after 30s
+  setTimeout(() => {
+    document.getElementById('quizBox').style.display = 'block';
+  }, 30000);
+
+  // Submit quiz
+  function submitQuiz() {
+    // Fireworks/confetti
+    for(let i=0; i<150; i++){
+      const confetti = document.createElement('div');
+      confetti.classList.add('confetti');
+      confetti.style.background = `hsl(${Math.random()*360},100%,50%)`;
+      confetti.style.left = Math.random()*100 + 'vw';
+      confetti.style.animationDuration = (2+Math.random()*2) + 's';
+      document.body.appendChild(confetti);
+      setTimeout(() => { confetti.remove(); }, 4000);
     }
-  }, 700);
-}
-
-function animate() {
-  requestAnimationFrame(animate);
-  ctx.fillStyle="rgba(0,0,0,0.2)";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  fireworks.forEach((f,i) => {
-    f.update(); f.draw();
-    if (f.alpha<=0) fireworks.splice(i,1);
-  });
-}
-animate();
+    // Redirect after short delay
+    setTimeout(()=> {
+      window.location.href = 'page13.html';
+    }, 2000);
+  }
 </script>
 
 </body>
