--- a/page14.html
+++ b/page14.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hug Time ❤️🤗</title>
+<title>kiss Time ❤️🤗</title>
 <style>
   body {
     margin: 0;
@@ -100,12 +100,12 @@
 <p style="color:yellow;">Un Amma ku  kiss Pannu😘🤗… Vaa 10 hug kudu 🫂</p>
 
 <div id="hugArea">
-  <img src="her.png" id="her" class="person">
-  <img src="you.png" id="you" class="person">
+  <img src="her1.png" id="her1" class="person">
+  <img src="you1.png" id="you1" class="person">
 </div>
 
-<button id="hugBtn">Give kiss😘 🫂</button>
-<p id="counter">Hugs Given: 0 🫂</p>
+<button id="hugBtn">Give kiss😘 </button>
+<p id="counter">kiss Given: 0 😘</p>
 
 <audio id="hugSound" src="Page14.mp3" preload="auto"></audio>
 
@@ -118,8 +118,8 @@
 
 <script>
 let hugs = 0;
-const her = document.getElementById("her");
-const you = document.getElementById("you");
+const her = document.getElementById("her1");
+const you = document.getElementById("you1");
 const hugBtn = document.getElementById("hugBtn");
 const counter = document.getElementById("counter");
 const hugSound = document.getElementById("hugSound");
@@ -127,7 +127,7 @@ const quizBox = document.getElementById("quizBox");
 
 hugBtn.addEventListener("click", () => {
   hugs++;
-  counter.innerText = `Kiss Given: ${hugs} 🫂`;
+  counter.innerText = `Kiss Given: ${kiss} 😘`;
 
   // Move images to center
   her.style.left = "40%";
