--- a/page11.html
+++ b/page11.html
@@ -109,6 +109,9 @@
 
 <audio id="hugSound" src="hug.mp3" preload="auto"></audio>
 
+<!-- 🎵 Autoplay background audio -->
+<audio id="bgMusic" src="page11.mp3" autoplay loop hidden></audio>
+
 <!-- Quiz Box -->
 <div class="quiz-box" id="quizBox">
   <p><b>Happy ya Panda 🐼??</b></p>
