--- a/page14.html
+++ b/page14.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Kissing Game 💋❤️</title>
+<title>Love Kiss Game 💋</title>
 <style>
   body {
     margin: 0;
     padding: 0;
-    background: black;
+    background: radial-gradient(circle at center, #2b0030, #000000 80%);
     color: white;
     text-align: center;
     font-family: Arial, sans-serif;
@@ -16,7 +16,9 @@
   h1 {
     margin-top: 15px;
     font-size: 22px;
-    color: pink;
+    text-shadow: 0 0 10px hotpink, 0 0 20px red, 0 0 30px purple;
+    position: relative;
+    z-index: 2;
   }
   #kissArea {
     position: relative;
@@ -24,12 +26,15 @@
     height: 400px;
     margin-top: 20px;
     overflow: hidden;
+    z-index: 2;
   }
   .person {
     position: absolute;
     bottom: 20px;
-    width: 180px;
-    transition: all 1.2s ease-in-out;
+    width: 150px;
+    transition: all 1.5s ease-in-out;
+    filter: drop-shadow(0 0 15px white);
+    z-index: 2;
   }
   #her {
     left: 10%;
@@ -38,42 +43,47 @@
     right: 10%;
   }
   .kissing {
-    transform: scale(1.15);
-    filter: drop-shadow(0 0 25px hotpink);
+    transform: scale(1.1);
+    filter: drop-shadow(0 0 25px pink);
   }
   #kissBtn {
     padding: 12px 25px;
-    background: deeppink;
+    background: hotpink;
     color: white;
     border: none;
     border-radius: 25px;
     font-size: 18px;
     cursor: pointer;
     margin-top: 20px;
-  }
-  #kissBtn:disabled {
-    background: gray;
-    cursor: not-allowed;
+    z-index: 2;
+    position: relative;
+    box-shadow: 0 0 15px hotpink, 0 0 30px red;
   }
   #counter {
     margin-top: 15px;
     font-size: 18px;
     color: cyan;
+    text-shadow: 0 0 10px cyan, 0 0 20px blue;
+    z-index: 2;
+    position: relative;
   }
   .emoji {
     position: absolute;
-    font-size: 28px;
-    animation: floatUp 3s linear forwards;
+    font-size: 26px;
+    animation: floatUp 2s linear forwards;
     pointer-events: none;
+    z-index: 3;
   }
   @keyframes floatUp {
     0% { opacity: 1; transform: translateY(0) scale(1);}
-    100% { opacity: 0; transform: translateY(-200px) scale(1.6);}
+    100% { opacity: 0; transform: translateY(-150px) scale(1.5);}
   }
-  /* Quiz box */
+  /* Quiz styles */
   .quiz-box {
     margin-top: 30px;
-    display: none;
+    display: none; /* Hidden until 10 kisses */
+    z-index: 2;
+    position: relative;
   }
   .quiz-box input {
     font-size: 18px;
@@ -93,11 +103,12 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
+    box-shadow: 0 0 10px lime, 0 0 20px green;
   }
   .quiz-box button:hover {
     background: green;
   }
-  /* Fireworks canvas */
+  /* Fireworks canvas behind */
   #fireworks {
     position: fixed;
     top: 0;
@@ -109,28 +120,30 @@
 </head>
 <body>
 
-<h1>Love Kiss Game 💙💋</h1>
-<p style="color:yellow;">Vaa Panda 🐼… 10 kisses kudu 🥰😘</p>
+<h1>Love Kiss Game 💋🔥</h1>
+<p style="color:yellow; text-shadow:0 0 10px yellow; z-index:2; position:relative;">
+  Panda 🐼, 10 kisses kuduthaa quiz open aagum 😘💙
+</p>
 
 <div id="kissArea">
   <img src="her1.png" id="her" class="person">
   <img src="you1.png" id="you" class="person">
 </div>
 
-<button id="kissBtn">Kiss 💋</button>
-<p id="counter">Kisses: 0/10 💞</p>
+<button id="kissBtn">Give Kiss 😘</button>
+<p id="counter">Kisses Given: 0 💋</p>
 
-<audio id="kissSound" src="Page14.mp3" autoplay loop></audio>
-
-<!-- Fireworks -->
-<canvas id="fireworks"></canvas>
+<audio id="bgMusic" src="Page14.mp3" autoplay loop></audio>
 
 <!-- Quiz Box -->
 <div class="quiz-box" id="quizBox">
-  <p><b>Un Amma Enna sollanumo solliko 🤗</b></p>
+  <p><b>Un Amma Enna sollanumo solliko🤗</b></p>
   <input type="text" id="quizAnswer" placeholder="Type here...">
   <button onclick="checkQuiz()">Submit</button>
 </div>
+
+<!-- Fireworks -->
+<canvas id="fireworks"></canvas>
 
 <script>
 let kisses = 0;
@@ -138,19 +151,72 @@ const her = document.getElementById("her");
 const you = document.getElementById("you");
 const kissBtn = document.getElementById("kissBtn");
 const counter = document.getElementById("counter");
-const kissSound = document.getElementById("kissSound");
 const quizBox = document.getElementById("quizBox");
 
-// Fireworks setup
-const canvas = document.getElementById("fireworks");
-const ctx = canvas.getContext("2d");
+kissBtn.addEventListener("click", () => {
+  kisses++;
+  counter.innerText = `Kisses Given: ${kisses} 💋`;
+
+  // Move to center
+  her.style.left = "40%";
+  you.style.right = "40%";
+
+  setTimeout(() => {
+    her.classList.add("kissing");
+    you.classList.add("kissing");
+
+    // Floating emojis
+    for (let i = 0; i < 8; i++) {
+      createEmoji(["❤️","💙","💜","💖","😘"][Math.floor(Math.random()*5)]);
+    }
+  }, 1500);
+
+  // Separate after 3s
+  setTimeout(() => {
+    her.style.left = "10%";
+    you.style.right = "10%";
+    her.classList.remove("kissing");
+    you.classList.remove("kissing");
+
+    // After 10 kisses show quiz
+    if (kisses >= 10) {
+      quizBox.style.display = "block";
+      kissBtn.disabled = true;
+    }
+  }, 3000);
+});
+
+function createEmoji(symbol) {
+  const emoji = document.createElement("div");
+  emoji.className = "emoji";
+  emoji.innerText = symbol;
+  emoji.style.left = Math.random() * window.innerWidth + "px";
+  emoji.style.top = "300px";
+  document.body.appendChild(emoji);
+  setTimeout(() => emoji.remove(), 2000);
+}
+
+// Quiz check
+function checkQuiz() {
+  let ans = document.getElementById("quizAnswer").value.trim();
+  if (ans.length > 0) {
+    window.location.href = "page15.html";
+  } else {
+    alert("Type something Panda 🐼🤗!");
+  }
+}
+
+// Fireworks
+const canvas = document.getElementById('fireworks');
+const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
-let particles = [];
 
+let particles = [];
 function random(min, max) { return Math.random() * (max - min) + min; }
 function Particle(x, y, color) {
-  this.x = x; this.y = y; this.color = color;
+  this.x = x; this.y = y;
+  this.color = color;
   this.radius = random(2,4);
   this.angle = random(0, 2 * Math.PI);
   this.speed = random(2,8);
@@ -169,83 +235,28 @@ Particle.prototype.draw = function() {
   ctx.globalAlpha = this.alpha;
   ctx.fillStyle = this.color;
   ctx.beginPath();
-  ctx.arc(this.x, this.y, this.radius, 0, Math.PI*2);
+  ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
   ctx.fill();
   ctx.restore();
 }
 function createFirework(x, y) {
-  const colors = ["#ff4da6","#ffcc00","#00ccff","#ff0066","#ffffff"];
-  for (let i=0; i<80; i++) {
+  const colors = ["#ff4da6", "#ffcc00", "#00ccff", "#ff0066", "#ffffff"];
+  for (let i = 0; i < 100; i++) {
     particles.push(new Particle(x, y, colors[Math.floor(Math.random()*colors.length)]));
   }
 }
-function animateFireworks() {
+function animate() {
   ctx.fillStyle = "rgba(0,0,0,0.2)";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  particles.forEach((p,i) => {
-    p.update(); p.draw();
-    if(p.alpha <= 0) particles.splice(i,1);
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  particles.forEach((p, i) => {
+    p.update();
+    p.draw();
+    if (p.alpha <= 0) particles.splice(i, 1);
   });
-  requestAnimationFrame(animateFireworks);
+  requestAnimationFrame(animate);
 }
-animateFireworks();
-
-// Floating emojis
-function createEmoji(symbol) {
-  const emoji = document.createElement("div");
-  emoji.className = "emoji";
-  emoji.innerText = symbol;
-  emoji.style.left = Math.random() * window.innerWidth + "px";
-  emoji.style.top = "300px";
-  document.body.appendChild(emoji);
-  setTimeout(() => emoji.remove(), 3000);
-}
-
-kissBtn.addEventListener("click", () => {
-  kisses++;
-  counter.innerText = `Kisses: ${kisses}/10 💞`;
-
-  // Move together
-  her.style.left = "40%";
-  you.style.right = "40%";
-
-  setTimeout(() => {
-    her.classList.add("kissing");
-    you.classList.add("kissing");
-
-    kissSound.play();
-
-    // effects
-    createFirework(window.innerWidth/2, window.innerHeight/2);
-    for (let i=0; i<10; i++) {
-      createEmoji(["❤️","💙","💜","💖","😘","💋"][Math.floor(Math.random()*6)]);
-    }
-  }, 1200);
-
-  // Separate after 2.5s
-  setTimeout(() => {
-    her.style.left = "10%";
-    you.style.right = "10%";
-    her.classList.remove("kissing");
-    you.classList.remove("kissing");
-
-    if (kisses >= 10) {
-      quizBox.style.display = "block";
-      kissBtn.disabled = true;
-    }
-  }, 2500);
-});
-
-// Quiz check
-function checkQuiz() {
-  let ans = document.getElementById("quizAnswer").value.trim();
-  if (ans.length > 0) {
-    createFirework(window.innerWidth/2, window.innerHeight/2);
-    setTimeout(() => { window.location.href = "page15.html"; }, 2000);
-  } else {
-    alert("Sollu Panda 🐼🤗!");
-  }
-}
+setInterval(() => createFirework(Math.random()*canvas.width, Math.random()*canvas.height/2), 2000);
+animate();
 </script>
 
 </body>
